--- a/Template0/styles.css
+++ b/Template0/styles.css
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+}
 a.HeaderLink {
     color: #18272f;
     position: relative;
@@ -23,14 +26,74 @@ a.HeaderLink:hover::before {
     transform: scaleX(1);
 }
 
-@media (max-width: 420px) {
-    .primary-navigation {
-        gap: 2em;
-        position: fixed;
-        inset: 0 0 0 35%;
-        flex-direction: column;
-        padding: min(30vh, 10rem) 2em;
-        background: hsla(199, 36%, 59%, 0.7);
-        backdrop-filter: blur(1rem);
-    }
+#menu__toggle {
+    opacity: 0;
+}
+#menu__toggle:checked + .menu__btn > span {
+    transform: rotate(45deg);
+}
+#menu__toggle:checked + .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0deg);
+}
+#menu__toggle:checked + .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+    right: 0 !important;
+}
+.menu__btn {
+    position: fixed;
+    top: 25px;
+    right: 20px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #616161;
+    transition-duration: 0.25s;
+}
+.menu__btn > span::before {
+    content: "";
+    top: -8px;
+}
+.menu__btn > span::after {
+    content: "";
+    top: 8px;
+}
+.menu__box {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    background-color: #eceff1;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+    transition-duration: 0.25s;
+}
+.menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: #333;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    transition-duration: 0.25s;
+}
+.menu__item:hover {
+    background-color: #cfd8dc;
 }
